# crawler

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Issue.md  Makefile  PRD.md  README.md  create_issues.sh  docker-compose.yml  main.py  openapi.yaml  pyproject.toml  sqlc.yaml  test_crawl.py  website_summary.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  deploy.yml
alembic/: README.md  env.py
alembic/versions/: 1d3ac885f5c4_convert_crawl_log_to_partitioned_table.py  21735a37e0d1_baseline_existing_schema_from_sql_.py  356b49daa767_add_scheduled_jobs_support.py  55248686c997_add_timezone_column_to_scheduled_job_.py  7992dcb6a14b_add_retry_policy_and_history_tables.py  7ae2337d8974_initial_schema_core_tables_and_enums.py  8ceb0f6003cf_add_dead_letter_queue_table.py  91df2bb4560c_add_simhash_fingerprint_to_content_hash.py  948eebe0b228_extend_crawl_job_for_inline_config_.py  af9c85210dfb_add_website_config_history_table.py  c7f64249dfa2_add_duplicate_group_and_relationship_.py  e8f93dc3e336_add_deleted_at_to_website_table.py
config/: settings.py
crawler/: __init__.py  worker.py
crawler/api/: __init__.py  routes.py  validators.py  websocket.py  websocket_models.py
crawler/api/schemas/: __init__.py  base.py  enums.py
crawler/api/v1/: __init__.py  decorators.py  dependencies.py  models.py  router.py
crawler/cache/: __init__.py  session.py
crawler/core/: __init__.py  browser_config.py  dependencies.py  logging.py  metrics.py
crawler/db/: __init__.py  repositories.py  session.py
crawler/db/repositories/: __init__.py  base.py  content_hash.py  crawl_job.py  crawl_log.py  crawled_page.py  dead_letter_queue.py  duplicate_group.py  retry_history.py  retry_policy.py  scheduled_job.py  website.py  website_config_history.py
crawler/models/: __init__.py
crawler/schemas/: __init__.py  content_hash.py  crawl_job.py  crawl_log.py  crawled_page.py  scheduled_job.py  website.py
crawler/services/: __init__.py  browser_pool.py  cache.py  condition_evaluator.py  content_normalizer.py  dependency_validator.py  dlq_metrics_updater.py  executor_retry.py  html_parser.py  job_retry_handler.py  local_rate_limiter.py  log_publisher.py  memory_monitor.py  memory_pressure_handler.py  nats_queue.py  pagination.py  priority_queue.py  redis_cache.py  resource_cleanup.py  result_persistence.py  retry_policy.py  retry_scheduler.py  retry_scheduler_cache.py  scheduled_job_processor.py  seed_url_crawler.py  selector_processor.py  step_execution_context.py  step_orchestrator.py  step_validator.py  storage.py  url_extractor.py  variable_resolver.py
crawler/services/step_executors/: __init__.py  api_executor.py  base.py  browser_executor.py  crawl_executor.py  http_executor.py  scrape_executor.py
crawler/utils/: __init__.py  cron.py  dst.py  pagination.py  simhash.py  simhash_helpers.py  url.py  variable_substitution.py
docs/: BROWSER_POOL.md  DATABASE_SCHEMA.md  NATS_INTEGRATION.md  SQLC_IMPLEMENTATION.md  TODO_SCHEMA_MIGRATION_REFACTOR.md  openapi-generation.md  resource-cleanup-on-cancellation.md  seed-url-crawler.md  variable-substitution.md
examples/: pagination_usage.py  variable_substitution_examples.py
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki-config.yml  promtail-config.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: init-db.sql  maintain_partitions.py  migrate.py  run_migrations.py
sql/: README.md
sql/migrations/: 001_initial_schema.sql  002_scheduled_jobs.sql  004_partition_crawl_log.sql  README.md
sql/queries/: content_hash.sql  crawl_job.sql  crawl_log.sql  crawled_page.sql  dead_letter_queue.sql  duplicate_group.sql  retry_history.sql  retry_policy.sql  scheduled_job.sql  website.sql  website_config_history.sql
sql/schema/: 003_seed_url_submissions.sql  004_partition_crawl_log.sql  README.md  current_schema.sql
sql/schema_backup/: 000_migration_tracking.sql  003_seed_url_submissions.sql
tests/: conftest.py
tests/integration/: test_api_routes.py  test_content_normalization_with_simhash.py  test_crawl_executor.py  test_crawl_log_broadcasting.py  test_database.py  test_dead_letter_queue.py  test_dlq_api.py  test_job_logs_api.py  test_job_retry.py  test_nats_log_streaming.py  test_nats_queue_cancellation.py  test_nats_real_connection.py  test_openapi_contract.py  test_redis.py  test_repositories.py  test_retry_scheduler.py  test_scrape_executor.py  test_step_orchestrator.py  test_step_validation_integration.py  test_variable_substitution_integration.py  test_websocket_logs.py  test_worker_integration.py
tests/integration/api/: test_routes.py
tests/integration/db/: test_database.py
tests/integration/repositories/: __init__.py  test_content_hash_repository.py  test_content_hash_simhash.py  test_crawl_job_constraint.py  test_crawl_job_repository.py  test_crawl_log_repository.py  test_crawled_page_repository.py  test_duplicate_group.py  test_scheduled_job_repository.py  test_website_repository.py
tests/integration/services/: test_cancellation_flow.py  test_redis.py  test_seed_url_crawler.py  test_url_deduplication_cache.py
tests/unit/: test_browser_pool.py  test_dependency_validator.py  test_html_parser.py  test_memory_monitor.py  test_memory_pressure_handler.py  test_priority_queue.py  test_retry_backoff_with_jitter.py  test_retry_policy.py  test_scheduled_job.py  test_schemas.py  test_selector_processor.py  test_step_execution_context.py  test_step_timeout.py  test_step_validator.py  test_url_extractor.py  test_variable_resolver.py  test_variable_substitution.py
tests/unit/api/: test_validators.py
tests/unit/db/: test_scheduled_job.py
tests/unit/repositories/: test_base.py  test_content_hash_repository.py  test_crawl_job_repository.py  test_crawl_log_repository.py  test_crawled_page_repository.py  test_scheduled_job_repository.py  test_website_repository.py
tests/unit/schemas/: test_schemas.py
tests/unit/services/: test_executor_retry.py  (+10 more)
(+30 files in other folders)
