[project]
name = "crawler"
version = "0.1.0"
description = "Lexicon Crawler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Browser Automation
    "playwright>=1.40.0",
    "undetected-chromedriver>=3.5.0",

    # HTTP Client
    "httpx>=0.27.0",

    # HTML Parsing
    "selectolax>=0.3.21",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Message Queue
    "nats-py>=2.7.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",

    # Cache
    "redis[hiredis]>=5.0.0",

    # Object Storage
    "google-cloud-storage>=2.14.0",

    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
