[project]
name = "crawler"
version = "0.1.0"
description = "Lexicon Crawler"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Browser Automation
    "playwright>=1.40.0",
    "undetected-chromedriver>=3.5.0",
    # HTTP Client
    "httpx>=0.27.0",
    # HTML Parsing
    "selectolax>=0.3.21",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Message Queue
    "nats-py>=2.7.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    # Cache
    "redis[hiredis]>=5.0.0",
    # Object Storage
    "google-cloud-storage>=2.14.0",
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "croniter>=6.0.0",
    "psutil>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",  # Avoid 0.23.x scoping regression
    "pytest-cov>=4.1.0,<8.0.0",
    "ruff>=0.14.6,<0.15.0",  # Match pre-commit rev v0.14.6
    "mypy>=1.18.1,<2.0.0",  # Match pre-commit rev v1.18.1
    "types-redis>=4.6.0",
    "types-croniter>=6.0.0.20250809",
    "types-lxml>=2025.3.0",
    "types-psutil>=6.0.0",
    "asyncpg-stubs>=0.30.0",
    "datamodel-code-generator[http]>=0.35.0,<0.36.0",
    "pyyaml>=6.0.0,<7.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"
indent-width = 4
exclude = ["crawler/db/generated", "crawler/api/generated", "clients/python"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # Unused arguments in tests
    "S101",   # Assert usage in tests
    "B017",   # pytest.raises(Exception) too broad
    "SIM105", # Use contextlib.suppress
    "SIM117", # Multiple with statements
    "RUF043", # Pytest regex patterns
]
"crawler/db/generated/**/*.py" = ["ALL"]
"crawler/api/generated/**/*.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["crawler", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "^crawler/db/generated/.*\\.py$",
    "^crawler/api/generated/.*\\.py$",
    "^clients/python/.*\\.py$",
    "^tests/.*\\.py$",
    "^examples/.*\\.py$",
]

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "crawler.api.generated.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "crawler.db.generated.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = [
    "-ra",                      # Show all test summary info
    "-q",                       # Quiet mode
    "--strict-markers",         # Fail on unknown markers
    "--strict-config",          # Fail on config errors
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:unclosed transport:ResourceWarning",
]

[tool.coverage.run]
source = ["crawler"]
branch = true
omit = [
    "*/tests/*",
    "*/crawler/db/generated/*",
    "*/crawler/api/generated/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
